// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAllLocalPoContent returns an array of tuples of localecode (filename) and object of trns 1`] = `
Array [
  "en-US",
  Object {
    "mockMessage.id": Object {
      "comments": Object {
        "reference": "src/path/to/en-US.po.trns.jsx:1:2",
        "translator": "WP-1234",
      },
      "msgid": "mockMessage.id",
      "msgstr": Array [
        "mock translated copy",
      ],
    },
    "mockMessage.id.en-US.po": Object {
      "comments": Object {
        "reference": "src/path/to/en-US.po.trns.jsx:3:4",
        "translator": "WP-2345",
      },
      "msgid": "mockMessage.id.en-US.po",
      "msgstr": Array [
        "mock translated copy from en-US.po",
      ],
    },
  },
]
`;

exports[`getLocalLocaleMessages returns an Object that maps locales to messages 1`] = `
Object {
  "en-US": Object {
    "mockMessage.id": "mock translated copy",
    "mockMessage.id.en-US.po": "mock translated copy from en-US.po",
  },
  "es": Object {
    "mockMessage.id": "mock translated copy",
    "mockMessage.id.es.po": "mock translated copy from es.po",
  },
  "es-ES": Object {
    "mockMessage.id": "mock translated copy",
    "mockMessage.id.es-ES.po": "mock translated copy from es-ES.po",
    "mockMessage.id.es.po": "mock translated copy from es.po",
  },
  "fr-FR": Object {
    "mockMessage.id": "mock translated copy",
    "mockMessage.id.fr-FR.po": "mock translated copy from fr-FR.po",
  },
}
`;

exports[`trn utils merge objects, throw error if dupe key 1`] = `
Object {
  "mockMessage.id": Object {
    "comments": Object {
      "reference": "src/path/to/component.trns.jsx:4:45",
      "translator": "WP-1234",
    },
    "msgid": "mockMessage.id",
    "msgstr": Array [
      "mock translated copy",
    ],
  },
  "mockMessage.id.2": Object {
    "comments": Object {
      "extracted": "text for test v2",
      "reference": "text2.txt:10:10",
    },
    "msgid": "mockMessage.id.2",
    "msgstr": Array [
      "id2 text",
    ],
  },
}
`;
